syntax = "proto3";
package protos;

option go_package = "../protos/bin";

message Post {
  string postId = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publicationDate = 5;
  repeated string tags = 6;
}

message CreatePostResponse {
  string postId = 1;
  string response = 2;
}

message GetPostRequest {
  string postId = 1;
}

message GetPostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string postId = 1;
}

message DeletePostResponse {
  string postId = 1;
  string status = 2;
}

service BlogService {
  rpc CreatePost(Post) returns (CreatePostResponse) {}
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
  // Add more RPCs as needed
}
